# patterns

./: CMakeLists.txt  LICENSE
absfactory/: audio.h  language.h  movie.h  movie_controller.h  movie_factory.h  observable.h  subtitles.h
adapter/: adapter.h
app/: CMakeLists.txt  main.cpp
builder/: article.h  director.h
facade/: calculator.h  facade.h  insurance_dispatcher.h  property.h
factory/: CMakeLists.txt  audio.h  factory.h  language.h  movie.h  shape.h  shape_dispatcher.h  shape_factory.h  subtitles.h
include/application/repositories/: course_repository.h  enrollment_repository.h  product_repository.h  student_repository.h  teacher_repository.h
include/application/usecases/: create_course_use_case.h  create_milk_use_case.h  create_tv_use_case.h  enroll_student_use_case.h  get_product_use_case.h  grade_enrollment_use_case.h
include/domain/: milk.h  pricable.h  product.h  toy.h  tv.h
include/domain/entities/: milk.h  perishable.h  product.h  toy.h  tv.h
include/domain/entity/: course.h  enrollment.h  grade.h  student.h  teacher.h
include/domain/services/: id_generator.h
lab1/app/: CMakeLists.txt
lab1/include/application/repositories/: enrollment_repository.h  teacher_repository.h
lab1/include/application/usecases/: enroll_student_use_case.h  get_course_use_case.h
lab1/include/domain/entity/: course.h  enrollment.h  grade.h  student.h  teacher.h
lab1/src/application/usecases/: enroll_student_use_case_impl.h  grade_enrollment_use_case_impl.h
lab1/src/domain/entity/: enrollment.cpp  (+2 more)
lab1/tests/: CMakeLists.txt  use_case_tests.cpp
lab2/src/: CMakeLists.txt
lab2/src/application/usecases/: create_toy_use_case_impl.h  get_product_use_case_impl.cpp
lab2/src/domain/entities/: product.cpp  tv.cpp
lab2/src/infrastructure/dispatcher/: dispatcher.h
lab2/src/infrastructure/repositories/: inmemory_product_repository.h
lab2/src/presentation/controllers/: command_controller.h  query_controller.h
lab2/tests/: CMakeLists.txt
lab3/: article.txt
lab3/absfactory/: movie_dispatcher.h  movie_service.h  movie_view.h  mvc_dispatcher.h
lab3/builder/: article_dispatcher.h  builder.h
lab3/factory/: shape_dispatcher.h
lab3/tests/: factory_tests.cpp
lab4/adapter/: tank.h  tank_dispatcher.h
lab4/app/: CMakeLists.txt  main.cpp
lab4/facade/: calculator.h  facade.h  property.h
lab4/tests/: facade_tests.cpp
lab5/: CMakeLists.txt
lab5/state/: dispatcher.h
lab6/: CMakeLists.txt
lab7/: .gitignore
lab7/strategy/: decorator.h  dispatcher.h  strategy.h
src/: CMakeLists.txt
src/application/usecases/: create_course_use_case.cpp  create_course_use_case.h  create_course_use_case_impl.h  create_milk_use_case_impl.cpp  create_milk_use_case_impl.h  create_toy_use_case_impl.cpp  create_toy_use_case_impl.h  create_tv_use_case_impl.cpp  create_tv_use_case_impl.h  enroll_student_use_case.cpp  enroll_student_use_case.h  enroll_student_use_case_impl.h  get_course_use_case.cpp  get_course_use_case_impl.h  get_product_use_case_impl.cpp  get_product_use_case_impl.h  grade_enrollment_use_case.cpp  grade_enrollment_use_case.h  grade_enrollment_use_case_impl.h
src/domain/entities/: milk.cpp  product.cpp  toy.cpp  tv.cpp
src/domain/entity/: course.cpp  enrollment.cpp  grade.cpp  student.cpp  teacher.cpp
src/infrastructure/dispatcher/: dispatcher.h
src/infrastructure/repositories/: course_repository.h  enrollment_repository.h  inmemory_course_repository.h  inmemory_enrollment_repository.h  inmemory_product_repository.h
src/presentation/controllers/: command_controller.h  query_controller.h
state/: atm.h  state.h
strategy/: calendar.h  dispatcher.h  event.h
tests/: CMakeLists.txt  absfactory_tests.cpp  adapter_tests.cpp  builder_tests.cpp  functional_tests.cpp  repository_tests.cpp  use_case_tests.cpp
(+6 files in other folders)
