cmake_minimum_required(VERSION 3.16)

project(MyProject VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_library(state  INTERFACE)
target_include_directories(state  INTERFACE
    ${CMAKE_CURRENT_SOURCE_DIR}/state 
)

add_subdirectory(app)